Revision history for {{$dist->name}}

{{$NEXT}}
 [API CHANGES]

 [BUG FIXES]
- add missing prereqs
 [DOCUMENTATION]

 [ENHANCEMENTS]

2.0.2
 - Released: 2019-01-24 09:29:38 UTC

 [BUG FIXES]
 - fix missing path to pmltq command

2.0.1
 - Released: 2019-01-11 06:48:12 UTC

 [BUG FIXES]
 - manualy increasing version in order to fix cpan indexing
 - fix some missing dependencies

2.0.0

0.0.1
 - Released: 2019-01-10 10:17:41 UTC

0.0.0